--- a/app/src/main/res/drawable/rect_gray_gray_stroke_radius_20.xml
+++ b/app/src/main/res/drawable/rect_gray_gray_stroke_radius_20.xml
@@ -4,5 +4,6 @@
     <stroke
         android:width="1dp"
         android:color="@color/gray000" />
+    <solid android:color="@color/white" />
     <corners android:radius="20dp" />
 </shape>
