--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -28,7 +28,7 @@
                 android:layout_height="6dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginStart="20dp"
-                android:src="@drawable/shape_gray100_fill_99_rect"
+                android:src="@{viewModel.bearChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/iv_onboarding_top_bar_second" />
@@ -38,7 +38,7 @@
                 android:layout_width="76dp"
                 android:layout_height="6dp"
                 android:layout_marginTop="28dp"
-                android:src="@drawable/shape_gray100_fill_99_rect"
+                android:src="@{viewModel.bearNameChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_first"
                 app:layout_constraintEnd_toStartOf="@id/iv_onboarding_top_bar_third" />
@@ -48,7 +48,7 @@
                 android:layout_width="76dp"
                 android:layout_height="6dp"
                 android:layout_marginTop="28dp"
-                android:src="@drawable/shape_gray100_fill_99_rect"
+                android:src="@{viewModel.themeChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_second"
                 app:layout_constraintEnd_toStartOf="@id/iv_onboarding_top_bar_fourth" />
@@ -59,7 +59,7 @@
                 android:layout_height="6dp"
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="20dp"
-                android:src="@drawable/shape_gray100_fill_99_rect"
+                android:src="@{viewModel.routineChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_third"
                 app:layout_constraintEnd_toEndOf="parent" />
