#6 [fix] onclick CI 충돌 해결

--- a/app/src/main/res/layout/fragment_happy_empty.xml
+++ b/app/src/main/res/layout/fragment_happy_empty.xml
@@ -57,8 +57,7 @@
         android:layout_marginBottom="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_happy_default_mention"
-        android:onClick="onRelativeLayoutClick">
+        app:layout_constraintTop_toBottomOf="@id/iv_happy_default_mention">
 
         <ImageView
             android:id="@+id/iv_happy_empty_card"
