#7 [chore] viewModel 파일 위치 이동

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.sopetit.softie.ui.onboarding.routinechoice.RoutineChoiceViewModel" />
+            type="com.sopetit.softie.ui.onboarding.OnboardingViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
