--- a/app/src/main/res/layout/item_daily_theme.xml
+++ b/app/src/main/res/layout/item_daily_theme.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/img_daily_add"
+            android:src="@drawable/ic_daily_add"
             android:layout_margin="10dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
