#7 [ui] 온보딩 - 테마 선택 xml 구현

--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.sopetit.softie.ui.onboarding.routinechoice.RoutineChoiceViewModel" />
+            type="com.sopetit.softie.ui.onboarding.OnboardingViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,14 +15,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="온보딩 - 관심 있는 테마 선택"
+        <ImageView
+            android:id="@+id/iv_onboarding_choice_theme_title_bear"
+            android:layout_width="53dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_doll_face_1"
+            android:layout_marginTop="34dp"
+            android:layout_marginStart="22dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_onboarding_choice_theme"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginHorizontal="21dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_theme_title_bear"
+            app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
+            tools:listitem="@layout/item_onboarding_choice_theme" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_onboarding_choice_theme"
+            android:layout_width="0dp"
+            android:layout_height="57dp"
+            android:text="@string/onboarding_choice_theme_btn"
+            android:textAppearance="@style/body1"
+            android:textColor="@color/gray000"
+            android:background="@color/gray200"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="34dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
