--- a/app/src/main/res/layout/fragment_happy_empty.xml
+++ b/app/src/main/res/layout/fragment_happy_empty.xml
@@ -27,7 +27,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="22dp"
             android:layout_marginTop="28dp"
-            android:src="@drawable/img_face_red"
+            android:src="@drawable/ic_face_red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_happy_title" />
 
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:src="@drawable/img_speech_long"
+            android:src="@drawable/ic_speech_long"
             app:layout_constraintBottom_toBottomOf="@id/iv_happy_character"
             app:layout_constraintStart_toEndOf="@id/iv_happy_character"
             app:layout_constraintTop_toTopOf="@id/iv_happy_character" />
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="62dp"
-                android:src="@drawable/img_happy_add"
+                android:src="@drawable/ic_happy_add"
                 app:layout_constraintEnd_toEndOf="@id/iv_happy_empty_card"
                 app:layout_constraintStart_toStartOf="@id/iv_happy_empty_card"
                 app:layout_constraintTop_toBottomOf="@id/tv_happy_empty_card" />
