#7 [feat] 테마 선택 recyclerview 구현

--- a/app/src/main/res/layout/item_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_theme.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_theme"
+        android:id="@+id/iv_theme_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_theme_1"
@@ -27,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="@id/iv_theme_background" />
 
     <TextView
+        android:id="@+id/tv_theme_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/theme_text"
