#7 [ui] 말풍선 text spannable 설정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,7 @@
     <!-- home name -->
     <color name="name_fill">#FFD4BBA5</color>
     <color name="name_stroke">#FFC4AC98</color>
+
+    <!-- onboarding -->
+    <color name="onboarding_speech">#FF259560</color>
 </resources>
