--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -25,6 +25,32 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ImageView
+            android:id="@+id/iv_onboarding_choice_theme_speech_background"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="29dp"
+            app:layout_goneMarginStart="14dp"
+            android:layout_marginEnd="23dp"
+            android:src="@drawable/ic_speech_long"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_onboarding_choice_theme_title_bear"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_onboarding_choice_theme_speech"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="14dp"
+            android:text="@string/onboarding_choice_theme_speech"
+            android:textColor="@color/gray700"
+            android:textAppearance="@style/bubble16"
+            android:bufferType="spannable"
+            app:layout_constraintTop_toTopOf="@id/iv_onboarding_choice_theme_speech_background"
+            app:layout_constraintBottom_toBottomOf="@id/iv_onboarding_choice_theme_speech_background"
+            app:layout_constraintStart_toStartOf="@id/iv_onboarding_choice_theme_speech_background"
+            app:layout_constraintEnd_toEndOf="@id/iv_onboarding_choice_theme_speech_background" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_onboarding_choice_theme"
             android:layout_width="0dp"
