--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,32 @@
     </style>
 
     <style name="Theme.Softie" parent="Base.Theme.Softie" />
+
+    <!-- Chip Style -->
+    <style name="Widget.Material3.Chip.Style" parent="">
+        <item name="chipMinTouchTargetSize">0dp</item>
+        <item name="chipEndPadding">0dp</item>
+        <item name="chipStartPadding">0dp</item>
+        <item name="android:checked">false</item>
+        <item name="android:clickable">false</item>
+    </style>
+
+    <style name="Style.Material3.Chip.Softie.Type" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="android:stateListAnimator">@null</item>
+        <item name="chipMinTouchTargetSize">0dp</item>
+        <item name="chipEndPadding">0dp</item>
+        <item name="chipMinHeight">0dp</item>
+        <item name="chipStartPadding">0dp</item>
+        <item name="chipCornerRadius">15dp</item>
+        <item name="chipBackgroundColor">@color/main1</item>
+        <item name="textStartPadding">14dp</item>
+        <item name="textEndPadding">14dp</item>
+        <item name="rippleColor">#00FFFFFF</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="chipStrokeWidth">1dp</item>
+        <item name="chipStrokeColor">@color/gray100</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
 </resources>
