--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -37,9 +37,8 @@
                 android:id="@+id/iv_onboarding_top_bar_second"
                 android:layout_width="76dp"
                 android:layout_height="6dp"
-                android:layout_marginTop="28dp"
                 android:src="@{viewModel.bearNameChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_onboarding_top_bar_first"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_first"
                 app:layout_constraintEnd_toStartOf="@id/iv_onboarding_top_bar_third" />
 
@@ -47,9 +46,8 @@
                 android:id="@+id/iv_onboarding_top_bar_third"
                 android:layout_width="76dp"
                 android:layout_height="6dp"
-                android:layout_marginTop="28dp"
                 android:src="@{viewModel.themeChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_onboarding_top_bar_first"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_second"
                 app:layout_constraintEnd_toStartOf="@id/iv_onboarding_top_bar_fourth" />
 
@@ -57,10 +55,8 @@
                 android:id="@+id/iv_onboarding_top_bar_fourth"
                 android:layout_width="76dp"
                 android:layout_height="6dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="20dp"
                 android:src="@{viewModel.routineChoiceView ? @drawable/shape_main1_fill_99_rect : @drawable/shape_gray100_fill_99_rect}"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_onboarding_top_bar_first"
                 app:layout_constraintStart_toEndOf="@id/iv_onboarding_top_bar_third"
                 app:layout_constraintEnd_toEndOf="parent" />
 
