#13 [add] 테마 선택 btn background 생성

--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -71,7 +71,9 @@
             android:text="@string/onboarding_choice_theme_btn"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
-            android:background="@color/gray200"
+            android:background="@drawable/selector_onboarding_theme_choose_btn"
+            android:enabled="false"
+            android:clickable="false"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="34dp"
             app:layout_constraintStart_toStartOf="parent"
