--- a/app/src/main/res/layout/activity_daily_add.xml
+++ b/app/src/main/res/layout/activity_daily_add.xml
@@ -1,92 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@id/tv_add_daily_routine"
-        android:background="@drawable/ic_daily_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_add_daily_routine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="201dp"
-        android:includeFontPadding="false"
-        android:text="데일리 루틴 추가"
-        android:textAppearance="@style/body1"
-        app:layout_constraintBottom_toBottomOf="@id/iv_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_back"
-        app:layout_constraintTop_toTopOf="@id/iv_back" />
+    </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_theme_daily"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_back"
-        tools:itemCount="12"
-        tools:listitem="@layout/item_daily_theme" />
-
-    <View
-        android:id="@+id/v_line"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/gray100"
-        app:layout_constraintTop_toBottomOf="@id/rv_theme_daily" />
+        android:layout_height="match_parent"
+        tools:context=".ui.daily.DailyAddActivity">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_daily_card"
-        android:layout_width="0dp"
-        android:layout_height="398dp"
-        android:layout_marginTop="27dp"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:paddingHorizontal="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/v_line" />
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/ic_daily_back"
+            app:layout_constraintEnd_toStartOf="@id/tv_add_daily_routine"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_daily_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/vp_daily_card"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tabBackground="@drawable/selector_daily_indicator"
-        app:tabGravity="center" />
+        <TextView
+            android:id="@+id/tv_add_daily_routine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="201dp"
+            android:includeFontPadding="false"
+            android:text="@string/tv_add_daily_routine"
+            android:textAppearance="@style/body1"
+            app:layout_constraintBottom_toBottomOf="@id/iv_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_back"
+            app:layout_constraintTop_toTopOf="@id/iv_back" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_add_daily"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="91dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="34dp"
-        android:background="@drawable/shape_black_fill_20_rect"
-        android:text="이 루틴을 추가할래"
-        android:textAppearance="@style/body1"
-        android:textColor="@color/gray000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vp_daily_card" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_theme_daily"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_back"
+            tools:itemCount="12"
+            tools:listitem="@layout/item_daily_theme" />
+
+        <View
+            android:id="@+id/v_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/gray100"
+            app:layout_constraintTop_toBottomOf="@id/rv_theme_daily" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_daily_card"
+            android:layout_width="0dp"
+            android:layout_height="398dp"
+            android:layout_marginTop="27dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/v_line" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tl_daily_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="55dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toTopOf="@id/btn_add_daily"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/vp_daily_card"
+            app:tabBackground="@drawable/selector_daily_indicator"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add_daily"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="91dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="34dp"
+            android:background="@drawable/shape_black_fill_20_rect"
+            android:text="@string/btn_add_daily"
+            android:textAppearance="@style/body1"
+            android:textColor="@color/gray000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/vp_daily_card" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
