--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,7 @@
 
     <!-- onboarding -->
     <color name="onboarding_speech">#FF259560</color>
+
+    <!-- story telling -->
+    <color name="story_telling_background">#FFE1E1E1</color>
 </resources>
