#11 [ui] png 변경에 따른 background 변경 및 ImageView로 바꾸기 / layout으로 변경

--- a/app/src/main/res/layout/fragment_story_telling_intro.xml
+++ b/app/src/main/res/layout/fragment_story_telling_intro.xml
@@ -1,44 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/ic_spotlight1">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/iv_story_telling_intro_girl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="194dp"
-        android:src="@drawable/ic_girl1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_story_telling_intro"
-        style="@style/bubble20"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="74dp"
-        android:background="@drawable/shape_white_fill_12_rect"
-        android:gravity="center"
-        android:paddingTop="23dp"
-        android:paddingBottom="22dp"
-        android:text="@string/story_telling_intro"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@color/story_telling_background">
 
-    <ImageView
-        android:id="@+id/btn_story_telling_intro_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_onboard_next"
-        app:layout_constraintBottom_toBottomOf="@id/tv_story_telling_intro"
-        app:layout_constraintEnd_toEndOf="@id/tv_story_telling_intro"
-        app:layout_constraintTop_toTopOf="@id/tv_story_telling_intro" />
+        <ImageView
+            android:id="@+id/iv_story_telling_intro_girl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="194dp"
+            android:src="@drawable/ic_girl1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_story_telling_intro"
+            style="@style/bubble20"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="74dp"
+            android:background="@drawable/shape_white_fill_12_rect"
+            android:gravity="center"
+            android:paddingTop="23dp"
+            android:paddingBottom="22dp"
+            android:text="@string/story_telling_intro"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/btn_story_telling_intro_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_onboard_next"
+            app:layout_constraintBottom_toBottomOf="@id/tv_story_telling_intro"
+            app:layout_constraintEnd_toEndOf="@id/tv_story_telling_intro"
+            app:layout_constraintTop_toTopOf="@id/tv_story_telling_intro" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
