--- a/app/src/main/res/layout/item_daily_theme.xml
+++ b/app/src/main/res/layout/item_daily_theme.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:clickable="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_daily_theme"
+    <ImageView
+        android:id="@+id/iv_daily_theme_background"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginHorizontal="3dp"
+        android:src="@drawable/ic_daily_theme_background"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/ic_daily_theme_background"
-        android:layout_marginHorizontal="3dp">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/iv_daily_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_daily_add"
-            android:layout_margin="10dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_daily_theme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_daily_add"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_theme_background"
+        app:layout_constraintTop_toTopOf="@id/iv_daily_theme_background"
+        app:layout_constraintEnd_toEndOf="@id/iv_daily_theme_background"
+        app:layout_constraintBottom_toBottomOf="@id/iv_daily_theme_background" />
 
     <TextView
         android:id="@+id/tv_theme_daily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/cl_daily_theme"
         android:layout_marginTop="6dp"
-        app:layout_constraintStart_toStartOf="@id/cl_daily_theme"
         android:text="@string/daily_theme_name"
-        android:textAppearance="@style/caption1" />
+        android:textColor="@color/gray400"
+        android:textAppearance="@style/caption1"
+        app:layout_constraintStart_toStartOf="@id/iv_daily_theme_background"
+        app:layout_constraintTop_toBottomOf="@id/iv_daily_theme_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
