--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.sopetit.softie.ui.onboarding.OnboardingViewModel" />
@@ -18,6 +20,46 @@
         android:id="@+id/cl_onboarding_choice_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_onboarding_choice_theme"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginBottom="21dp"
+            android:layout_marginHorizontal="21dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_theme_title_bear"
+            app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
+            tools:listitem="@layout/item_onboarding_choice_theme" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_onboarding_choice_theme"
+            android:layout_width="0dp"
+            android:layout_height="57dp"
+            android:text="@string/onboarding_choice_theme_btn"
+            android:textAppearance="@style/body1"
+            android:textColor="@color/gray000"
+            android:background="@{themeViewModel.themeBtnEnabled ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
+            android:enabled="@{themeViewModel.themeBtnEnabled ? true : false}"
+            android:clickable="@{themeViewModel.themeBtnEnabled ? true : false}"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="34dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_onboarding_choice_theme_translucent_background"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/onboarding_translucent"
+            android:visibility="@{themeViewModel.layoutTranslucent ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
             android:id="@+id/iv_onboarding_choice_theme_title_bear"
@@ -54,35 +96,6 @@
             app:layout_constraintBottom_toBottomOf="@id/iv_onboarding_choice_theme_speech_background"
             app:layout_constraintStart_toStartOf="@id/iv_onboarding_choice_theme_speech_background"
             app:layout_constraintEnd_toEndOf="@id/iv_onboarding_choice_theme_speech_background" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_onboarding_choice_theme"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="34dp"
-            android:layout_marginBottom="21dp"
-            android:layout_marginHorizontal="21dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_theme_title_bear"
-            app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
-            tools:listitem="@layout/item_onboarding_choice_theme" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_onboarding_choice_theme"
-            android:layout_width="0dp"
-            android:layout_height="57dp"
-            android:text="@string/onboarding_choice_theme_btn"
-            android:textAppearance="@style/body1"
-            android:textColor="@color/gray000"
-            android:background="@{themeViewModel.themeBtnEnabled ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
-            android:enabled="@{themeViewModel.themeBtnEnabled ? true : false}"
-            android:clickable="@{themeViewModel.themeBtnEnabled ? true : false}"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="34dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
