--- a/app/src/main/res/layout/item_daily_theme.xml
+++ b/app/src/main/res/layout/item_daily_theme.xml
@@ -1,39 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:clickable="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_daily_theme_background"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="3dp"
-        android:src="@drawable/ic_daily_theme_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <ImageView
-        android:id="@+id/iv_daily_theme"
+        <variable
+            name="data"
+            type="com.sopetit.softie.domain.entity.DailyTheme" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_daily_add"
-        app:layout_constraintStart_toStartOf="@id/iv_daily_theme_background"
-        app:layout_constraintTop_toTopOf="@id/iv_daily_theme_background"
-        app:layout_constraintEnd_toEndOf="@id/iv_daily_theme_background"
-        app:layout_constraintBottom_toBottomOf="@id/iv_daily_theme_background" />
+        android:clickable="true">
 
-    <TextView
-        android:id="@+id/tv_theme_daily"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:text="@string/daily_theme_name"
-        android:textColor="@color/gray400"
-        android:textAppearance="@style/caption1"
-        app:layout_constraintStart_toStartOf="@id/iv_daily_theme_background"
-        app:layout_constraintTop_toBottomOf="@id/iv_daily_theme_background" />
+        <FrameLayout
+            android:id="@+id/fl_daily_theme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/iv_daily_theme_background"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="3dp"
+                android:src="@drawable/ic_daily_theme_background"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_daily_theme"
+                setImage="@{data.iconImageUrl}"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@color/red"
+                app:layout_constraintBottom_toBottomOf="@id/iv_daily_theme_background"
+                app:layout_constraintEnd_toEndOf="@id/iv_daily_theme_background"
+                app:layout_constraintStart_toStartOf="@id/iv_daily_theme_background"
+                app:layout_constraintTop_toTopOf="@id/iv_daily_theme_background" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_theme_daily"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="@{data.content}"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray400"
+            app:layout_constraintEnd_toEndOf="@id/fl_daily_theme"
+            app:layout_constraintStart_toStartOf="@id/fl_daily_theme"
+            app:layout_constraintTop_toBottomOf="@id/fl_daily_theme"
+            tools:text="테마" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
