--- a/app/src/main/res/layout/item_daily_card.xml
+++ b/app/src/main/res/layout/item_daily_card.xml
@@ -25,6 +25,7 @@
                 android:gravity="center"
                 android:text="@string/daily_card_name"
                 android:textAppearance="@style/head1"
+                android:lineSpacingExtra="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
