--- a/app/src/main/res/layout/item_daily_theme.xml
+++ b/app/src/main/res/layout/item_daily_theme.xml
@@ -28,7 +28,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="3dp"
-                android:src="@drawable/ic_daily_theme_background"
+                android:background="@drawable/ic_daily_theme_background"
+                android:clickable="true"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
