--- a/app/src/main/res/layout/item_happy_add_list.xml
+++ b/app/src/main/res/layout/item_happy_add_list.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -10,8 +10,7 @@
         android:id="@+id/item_happy_add_component"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="14dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginHorizontal="20dp"
         android:background="@drawable/rect_gray_gray_stroke_radius_20">
 
         <ImageView
@@ -56,11 +55,11 @@
             android:id="@+id/iv_happy_list_item_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_next"
             android:layout_marginEnd="12dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_next"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
