--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="14dp"
-            android:text="@string/onboarding_choice_theme_speech"
+            android:text="@{themeViewModel.layoutTranslucent ? @string/onboarding_choice_theme_speech : @string/onboarding_choice_theme_speech_after}"
             android:textColor="@color/gray700"
             android:textAppearance="@style/bubble16"
             android:bufferType="spannable"
